# cloudmesh-ai-speedtest

./: .gitignore  .report.html  CHANGELOG.md  LICENSE  Makefile  README.md  VERSION  cmd.py  pyproject.toml  requirements.txt
src/cloudmesh/ai/command/: speedtest.py
src/cloudmesh/ai/extension/: speedtest.py
tests/: test_speedtest.py
