[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudmesh-ai-speedtest"

dynamic = ["version"]
description = "Extension speedtest created by CME"
license = "Apache-2.0"
dependencies = [
    "cloudmesh-ai-cmc",
    "click",
    "rich",
    "pytest",
]
[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.entry-points."cloudmesh.ai.command"]
speedtest = "command.speedtest:register"

[tool.setuptools.packages.find]
where = ["src"]
include = ["command*"]
